<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navCapture"
        android:icon="@drawable/ic_nav_camera"
        android:title="@string/nav_capture" />
    <item
        android:id="@+id/navGallery"
        android:icon="@drawable/ic_nav_gallery"
        android:title="@string/nav_gallery" />
    <item
        android:id="@+id/navVideo"
        android:icon="@drawable/ic_nav_video"
        android:title="@string/nav_video" />
    <item
        android:id="@+id/navHistory"
        android:icon="@drawable/ic_nav_history"
        android:title="@string/nav_history" />
    <item
        android:id="@+id/navSettings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/nav_settings" />
</menu>
